删除map.png，改用map1.png，并更新index.html引用

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="slide">
           <div class="slide-content">
             <h2>招募优秀人才</h2>
-            <p>我们以 “让智能体真正理解并作用于物理世界”为使命，注重理论创新与硬件落地结合 ，拥有先进的实验平台和开源生态）。
+            <p>我们以 "让智能体真正理解并作用于物理世界"为使命，注重理论创新与硬件落地结合 ，拥有先进的实验平台和开源生态）。
               并欢迎企业与学界以联合研发、技术咨询等形式开展合作，共同推动具身智能从实验室走向真实世界。欢迎有志于机器人学 / 人工智能方向优秀的本科、硕士、博士生，加入我们的团队</p>
             <a href="admission.html" class="btn">招生详情</a>
           </div>
@@ -363,7 +363,7 @@
         </div>
         <div class="contact-map">
           <!-- 这里可以嵌入地图，或者使用静态图片代替 -->
-          <img src="images/map.png" alt="实验室地图">
+          <img src="images/map1.png" alt="实验室地图">
         </div>
       </div>
     </div>
