--- a/team.html
+++ b/team.html
@@ -166,7 +166,7 @@
       line-height: 1.6;
       color: var(--dark-gray);
       margin-bottom: 15px;
-      height: 85px;
+      height: 105px;
       overflow: hidden;
     }
 
@@ -227,7 +227,7 @@
           <li><a href="team.html">团队成员</a></li>
           <li><a href="publications.html">学术成果</a></li>
           <li><a href="admission.html">招生信息</a></li>
-          <li><a href="contact.html">联系方式</a></li>
+
         </ul>
       </nav>
       <div class="menu-toggle">
@@ -244,7 +244,7 @@
     <div class="container">
       <div class="page-header-content">
         <h1>团队成员</h1>
-        <p>我们实验室拥有一支由经验丰富的教授、优秀的博士后、研究生和本科生组成的多元化研究团队</p>
+        <p>我们实验室拥有一支由经验丰富的指导老师、优秀的研究生和本科生组成的多元化研究团队</p>
         <ul class="breadcrumb">
           <li><a href="index.html">首页</a></li>
           <li>团队成员</li>
@@ -265,13 +265,14 @@
         <!-- 教师1 -->
         <div class="team-card">
           <div class="member-photo">
-            <img src="images/professor1.jpg" alt="张教授">
+            <img src="images/xiayan.png" alt="夏老师">
           </div>
           <div class="member-info">
-            <h3>张教授</h3>
-            <div class="member-position">实验室主任 | 教授</div>
+            <h3>夏老师</h3>
+            <div class="member-position">实验室主任 | 中国科学技术大学预聘副教授</div>
             <div class="member-short-bio">
-              张教授在推荐系统和机器学习领域有20年研究经验，发表100余篇高水平论文，担任多个国际会议程序委员会主席。
+              牛津大学视觉几何实验室（VGG）访问学者。博士毕业于慕尼黑工业大学，期间在牛津大学VGG实验室联合培养。研究成果发表于CVPR、ICCV、ECCV和ISPRS
+              JPRS等国际顶级会议和期刊
             </div>
             <div class="member-links">
               <a href="#"><i class="fas fa-globe"></i></a>
@@ -282,7 +283,6 @@
           </div>
         </div>
 
-        <!-- 教师2 -->
         <div class="team-card">
           <div class="member-photo">
             <img src="images/professor2.jpg" alt="李教授">
@@ -302,7 +302,7 @@
           </div>
         </div>
 
-        <!-- 教师3 -->
+
         <div class="team-card">
           <div class="member-photo">
             <img src="images/professor3.jpg" alt="王教授">
@@ -321,61 +321,12 @@
             </div>
           </div>
         </div>
+
       </div>
     </div>
   </section>
 
-  <!-- 博士后 -->
-  <section class="team-category">
-    <div class="container">
-      <div class="category-title">
-        <h2>博士后</h2>
-        <p>我们的博士后研究人员在各自领域拥有深厚的专业知识，并在实验室研究方向上做出了重要贡献</p>
-      </div>
 
-      <div class="team-grid">
-        <!-- 博士后1 -->
-        <div class="team-card">
-          <div class="member-photo">
-            <img src="images/postdoc1.jpg" alt="赵博士">
-          </div>
-          <div class="member-info">
-            <h3>赵博士</h3>
-            <div class="member-position">博士后研究员</div>
-            <div class="member-short-bio">
-              赵博士专注于大语言模型在推荐系统中的应用研究，曾在国际顶级会议上发表多篇论文。
-            </div>
-            <div class="member-links">
-              <a href="#"><i class="fas fa-globe"></i></a>
-              <a href="#"><i class="fas fa-envelope"></i></a>
-              <a href="#"><i class="fab fa-google"></i></a>
-              <a href="#"><i class="fab fa-github"></i></a>
-            </div>
-          </div>
-        </div>
-
-        <!-- 博士后2 -->
-        <div class="team-card">
-          <div class="member-photo">
-            <img src="images/postdoc2.jpg" alt="钱博士">
-          </div>
-          <div class="member-info">
-            <h3>钱博士</h3>
-            <div class="member-position">博士后研究员</div>
-            <div class="member-short-bio">
-              钱博士主要研究公平推荐系统和算法偏见缓解方法，曾参与多个国际合作项目。
-            </div>
-            <div class="member-links">
-              <a href="#"><i class="fas fa-globe"></i></a>
-              <a href="#"><i class="fas fa-envelope"></i></a>
-              <a href="#"><i class="fab fa-google"></i></a>
-              <a href="#"><i class="fab fa-github"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <!-- 研究生 -->
   <section class="team-category">
@@ -389,17 +340,17 @@
         <!-- 研究生1 -->
         <div class="team-card">
           <div class="member-photo">
-            <img src="images/phd1.jpg" alt="孙同学">
+            <img src="images/caoxuewei.jpg" alt="曹学伟">
           </div>
           <div class="member-info">
-            <h3>孙同学</h3>
+            <h3>曹学伟</h3>
             <div class="member-position">博士研究生</div>
             <div class="member-short-bio">
-              孙同学研究方向为生成式推荐系统，目前专注于多模态内容生成与个性化推荐技术。
+              曹学伟是中国科学技术大学SPIN-LAB的三年级博士生,师从夏彦导师。研究方向为3D点云处理领域,目前感兴趣的方向为多模态内容处理和AI for science。
             </div>
             <div class="member-links">
-              <a href="#"><i class="fas fa-envelope"></i></a>
-              <a href="#"><i class="fab fa-github"></i></a>
+              <a href="https://cxweb.site/"><i class="fas fa-envelope"></i></a>
+              <a href="https://cxweb.site/"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -407,17 +358,17 @@
         <!-- 研究生2 -->
         <div class="team-card">
           <div class="member-photo">
-            <img src="images/phd2.jpg" alt="周同学">
+            <img src="images/wuyuhan.jfif" alt="吴雨涵">
           </div>
           <div class="member-info">
-            <h3>周同学</h3>
+            <h3>吴雨涵</h3>
             <div class="member-position">博士研究生</div>
             <div class="member-short-bio">
-              周同学研究图神经网络在社交推荐中的应用，关注大规模图计算优化问题。
+              吴雨涵是中国科学技术大学SPIN-LAB实验室的在读博士研究生,由夏彦老师指导。专注于具身智能、移动机器人自主导航和移动操作任务的研究。
             </div>
             <div class="member-links">
-              <a href="#"><i class="fas fa-envelope"></i></a>
-              <a href="#"><i class="fab fa-github"></i></a>
+              <a href="https://github.com/Yuhan321"><i class="fas fa-envelope"></i></a>
+              <a href="https://github.com/Yuhan321"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -425,13 +376,31 @@
         <!-- 研究生3 -->
         <div class="team-card">
           <div class="member-photo">
-            <img src="images/master1.jpg" alt="吴同学">
+            <img src="images/wangzhichao.jfif" alt="王志超">
           </div>
           <div class="member-info">
-            <h3>吴同学</h3>
+            <h3>王志超</h3>
             <div class="member-position">硕士研究生</div>
             <div class="member-short-bio">
-              吴同学研究兴趣为因果推荐系统，专注于处理推荐系统中的选择偏差问题。
+              王致超，中国科学技术大学SPIN-LAB实验室在读硕士研究生，师从夏彦导师。在具身智能、机器人等领域进行探索学习。
+            </div>
+            <div class="member-links">
+              <a href="http://github.com/Zhichao9264"><i class="fas fa-envelope"></i></a>
+              <a href="http://github.com/Zhichao9264"><i class="fab fa-github"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <!-- 研究生4 -->
+        <div class="team-card">
+          <div class="member-photo">
+            <img src="images/wangshuo.jfif" alt="王硕">
+          </div>
+          <div class="member-info">
+            <h3>王硕</h3>
+            <div class="member-position">硕士研究生</div>
+            <div class="member-short-bio">
+              王硕，中国科学技术大学SPIN-LAB实验室在读硕士研究生，师从夏彦导师。致力于具身智能、自动驾驶、多模态感知等领域的研究学习。
             </div>
             <div class="member-links">
               <a href="#"><i class="fas fa-envelope"></i></a>
@@ -440,16 +409,15 @@
           </div>
         </div>
 
-        <!-- 研究生4 -->
         <div class="team-card">
           <div class="member-photo">
-            <img src="images/master2.jpg" alt="郑同学">
+            <img src="images/zengbing.png" alt="曾斌">
           </div>
           <div class="member-info">
-            <h3>郑同学</h3>
+            <h3>曾斌</h3>
             <div class="member-position">硕士研究生</div>
             <div class="member-short-bio">
-              郑同学研究公平推荐系统中的多目标优化问题，关注算法公平性与推荐质量的平衡。
+              曾斌，中国科学技术大学SPIN-LAB实验室在读硕士研究生，由夏彦老师指导。感兴趣的研究方向为具身智能、自动驾驶与机器人感知定位。
             </div>
             <div class="member-links">
               <a href="#"><i class="fas fa-envelope"></i></a>
@@ -457,9 +425,14 @@
             </div>
           </div>
         </div>
+
+
+
+
       </div>
     </div>
   </section>
+
 
   <!-- 加入我们 -->
   <section class="join-us">
